API Auth Activation Part 1
