# src/controller/auth.controller.ts
@@ -30,6 +30,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
     async register(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         */
         const {fullName, userName, email, password, confirmPassword} = req.body as unknown as TRegister;
 
         const result = await UserModel.create({
@@ -59,7 +62,8 @@ export default {
 
     async login(req: Request, res: Response) {
         /**
-         #swagger.requestBody = {
+        #swagger.tags = ['Auth']
+        #swagger.requestBody = {
             required: true,
             schema: {$ref: "#/components/schemas/LoginRequest"}}
          */
@@ -114,7 +118,8 @@ export default {
 
     async me(req: IReqUser, res: Response) {
         /**
-         #swagger.security = [{
+        #swagger.tags = ['Auth']
+        #swagger.security = [{
             "bearerAuth": []
          }]
          */
